# spamclassifier

./: .gitignore  .python-version  MANIFEST.in  pyproject.toml
spamclassifier/: model.py  perprocess.py  preprocess.py
