[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spamclassifier"
version = "0.0.1"
authors = [
  { name="Sevan Kelpentidjian", email="s.kelpet@gmail.com" },
]
description = "Classifies mails as spam or regular"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'pandas',
    'scikit-learn',
]

[tool.setuptools]
packages = ["spamclassifier"]

[project.urls]
"Homepage" = ""
